--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
 @import url("photographer.css");
+@import url("mediaqueries.css");
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+a {
+    color: inherit; 
+    text-decoration: none; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
 }
-
 
 header {
     display: flex;
@@ -15,7 +35,7 @@ header {
 }
 
 h1 {
-    color: #901C1C;
+    color: #901c1c;
     margin-right: 100px;
 }
 
@@ -31,6 +51,10 @@ h1 {
     margin-top: 100px;
 }
 
+article {
+    width: 200px;
+    height: 310px;
+}
 .photographer_section article {
     justify-self: center;
     display: flex;
@@ -40,7 +64,7 @@ h1 {
 }
 
 .photographer_section article h2 {
-    color: #D3573C;
+    color: #d3573c;
     font-size: 36px;
 }
 
