--- a/css/photographer.css
+++ b/css/photographer.css
@@ -7,6 +7,13 @@
     height: 300px;
     margin: 0 100px;
 }
+.photograph-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0 50px;
+}
 
 .contact_button {
     font-size: 20px;
