--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,14 +1,23 @@
 #contact_modal {
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #312e2e5a;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 .photograph-header {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     height: 300px;
     margin: 0 100px;
     padding: 0 50px;
 }
-.photograph-section{
+.photograph-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,14 +32,14 @@
     width: 170px;
     height: 70px;
     border: none;
-    background-color: #901C1C;
+    background-color: #901c1c;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .modal {
     border-radius: 5px;
-    background-color: #DB8876;
+    background-color: #db8876;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -63,7 +72,7 @@ form {
 }
 
 form label {
-    color: #312E2E;
+    color: #312e2e;
     font-size: 36px;
 }
 
@@ -75,9 +84,14 @@ form div {
     margin-bottom: 26px;
 }
 
-form input {
+form input,
+form textarea {
     width: 100%;
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+form textarea {
+    resize: vertical;
+    height: 200px;
 }
