--- a/css/photographer.css
+++ b/css/photographer.css
@@ -124,3 +124,113 @@ form textarea {
     height: 351px;
     width: 100%;
 }
+
+
+.select-group {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 30px 80px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.select-text {
+    padding-right: 20px;
+    font-size: 18px;
+}
+
+.btn-sort {
+    display: flex;
+    justify-content: space-between;
+    width: 170px;
+    background-color:#901C1C;
+    color: white;
+    padding: 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-text {
+    font-family: "DM Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.btn-arrow {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    padding: 4px;
+    margin-top: 4px;
+    transform: rotate(45deg);
+}
+
+.btn-rotate {
+    transform: rotate(225deg);
+}
+
+.dropdown {
+    position: absolute;
+    z-index: 100;
+    top: 60px;
+    left: 87px;
+    width: 143px;
+    color: white;
+    background-color: #901C1C;
+    border-radius: 5px;
+    margin-top: -5px;
+    border: none;
+}
+
+.select-legend {
+    position: absolute;
+    left: -10000em;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.option {
+    display: none;
+}
+
+.select-item {
+    display: block;
+    padding: 15px 0;
+    border-bottom: solid 2px white;
+    transition: opacity .3s;
+}
+
+.select-item:last-child {
+    border-bottom: none; /* Remove top border for the first child */
+}
+
+.select-item:hover {
+    opacity: 0.7;
+}
+
+.hidden {
+    display: none;
+}
+
+.contact_button {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    padding: 11px;
+    width: 170px;
+    height: 70px;
+    border: none;
+    background-color: #901C1C;
+    border-radius: 5px;
+    cursor: pointer;
+    order: 2;
+    transition: .3s;
+}
+
+.contact_button:hover, .contact_button:focus {
+    color: black;
+    background-color: #DB8876;
+
+}
