--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ article {
 .photographer_section article h2 {
     color: #d3573c;
     font-size: 36px;
+    text-align: center;
 }
 
 .photographer_section article img {
