--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -12,6 +12,18 @@
 @media only screen and (min-width: 600px) {}
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
+    .modal{
+        width: 100%;
+    }
+    .modal header h2{
+        font-size: 28px;
+    }
+    #contactForm label{
+        font-size: 24px;
+    }
+    .modal header img{
+        width: 32px;
+    }
     .photograph-section h1, .photograph-section p{
         padding: 10px 0;
     }
@@ -70,4 +82,8 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {}
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (max-width: 1200px) {
+    .modal{
+        height: 70%;
+    }
+}
