--- a/css/photographer.css
+++ b/css/photographer.css
@@ -62,7 +62,26 @@
     cursor: pointer;
 }
 
+.modal::-webkit-scrollbar {
+    width: 6px; /* Set the width of the scrollbar */
+}
+.modal::-webkit-scrollbar-track {
+    background-color: transparent; /* Set the background color of the track to transparent */
+}
+.modal::-webkit-scrollbar-thumb {
+    background-color: #888; /* Set the color of the thumb */
+    border-radius: 3px; /* Optional: Add border-radius for a rounded thumb */
+}
+.modal::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Set the color of the thumb on hover */
+}
+::-webkit-scrollbar-corner {
+    background: transparent
+}
+
 .modal {
+    overflow-x: hidden;
+    overflow-y: scroll;
     border-radius: 5px;
     background-color: #db8876;
     width: 50%;
@@ -272,6 +291,7 @@ form textarea {
     word-wrap: break-word;
 }
 .likes {
+    all: unset;
     color: #901c1c;
     font-size: 24px;
     font-family: DM Sans;
